--- a/src/quark-runtime/installer/package-manifest.in
+++ b/src/quark-runtime/installer/package-manifest.in
@@ -136,6 +136,7 @@
 @BINPATH@/@DLL_PREFIX@mozsqlite3@DLL_SUFFIX@
 #endif
 @BINPATH@/@DLL_PREFIX@lgpllibs@DLL_SUFFIX@
+@BINPATH@/@DLL_PREFIX@gkcodecs@DLL_SUFFIX@
 #ifdef MOZ_FFVPX
 @BINPATH@/@DLL_PREFIX@mozavutil@DLL_SUFFIX@
 @BINPATH@/@DLL_PREFIX@mozavcodec@DLL_SUFFIX@
@@ -197,6 +198,8 @@
 #endif # MOZ_ANGLE_RENDERER
 
 ; [Browser Chrome Files]
+@RESPATH@/chrome/browser.manifest
+@RESPATH@/chrome/browser/*
 @RESPATH@/chrome/pdfjs.manifest
 @RESPATH@/chrome/pdfjs/*
 @RESPATH@/chrome/toolkit@JAREXT@
