:sparkles: Create a stub for BrowserGlue

--- a/src/quark-runtime/components/components.conf
+++ b/src/quark-runtime/components/components.conf
@@ -7,10 +7,15 @@
 Classes = [
     {
         'cid': '{2bdc979f-d4da-4c22-8a05-8fc9dd37854d}',
-        # REVIEW: Is there a better id for this?
         'contract_ids': ['@trickypr.com/utils/app-launcher'],
-        'esModule': 'resource://gre/modules/AppLauncher.sys.mjs',
+        'esModule': 'resource://app/modules/AppLauncher.sys.mjs',
         'constructor': 'AppLauncher',
         'categories': {'command-line-handler': 'y-default'}
+    },
+    {
+        'cid': '{a5ab8550-454e-4ae5-854d-5619a691bbea}',
+        'contract_ids': ['@fushra.com/mvb/browserglue;1'],
+        'esModule': 'resource://app/modules/BrowserGlue.sys.mjs',
+        'constructor': 'BrowserGlue'
     }
 ]
