:sparkles: Regiser about redirector component

--- a/src/quark-runtime/components/components.conf
+++ b/src/quark-runtime/components/components.conf
@@ -6,6 +6,15 @@
 
 Classes = [
     {
+        'cid': '2b618202-a937-11ee-9902-c87f5401edc0',
+        'contract_ids': [
+            "@mozilla.org/network/protocol/about;1?what=certerror",
+            "@mozilla.org/network/protocol/about;1?what=tests",
+        ],
+        'esModule': 'resource://app/modules/AboutRedirector.sys.mjs',
+        'constructor': 'AboutRedirector'
+    },
+    {
         'cid': '{2bdc979f-d4da-4c22-8a05-8fc9dd37854d}',
         'contract_ids': ['@trickypr.com/utils/app-launcher'],
         'esModule': 'resource://app/modules/AppLauncher.sys.mjs',
