--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@ node_modules/
 engine/
 .gluon/
 dist/
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
+
+# System mozillabuild
+mozillabuild
+
