✨ Provide overridable ContentCLH

--- a/src/quark-runtime/components/components.conf
+++ b/src/quark-runtime/components/components.conf
@@ -22,6 +22,14 @@ Classes = [
         'categories': {'command-line-handler': 'y-default'}
     },
     {
+        'cid': '{12238385-abbf-4fdb-b6ce-083549a96ba0}',
+        'contract_ids': ['@trickypr.com/utils/final-clh;1'],
+        'esModule': 'resource://app/modules/ContentCLH.sys.mjs',
+        'processes': ProcessSelector.MAIN_PROCESS_ONLY,
+        'constructor': 'ContentCLH',
+        'categories': {'command-line-handler': 'x-default'},
+    },
+    {
         'cid': '{a5ab8550-454e-4ae5-854d-5619a691bbea}',
         'contract_ids': ['@fushra.com/mvb/browserglue;1'],
         'esModule': 'resource://app/modules/BrowserGlue.sys.mjs',
