👷 Try using devenv for CI environment

--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -20,12 +20,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
@@ -40,13 +35,6 @@ jobs:
           git config --global user.email "trickypr@users.noreply.github.com"
           git config --global user.name "TrickyPR"
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update --fix-missing
-          sudo apt-get update
-          sudo apt-get install meson dos2unix yasm nasm build-essential libgtk2.0-dev libpython3-dev m4 uuid libasound2-dev libcurl4-openssl-dev libdbus-1-dev libdrm-dev libdbus-glib-1-dev libdbus-glib-1-dev libgtk-3-dev libpulse-dev libx11-xcb-dev libxt-dev xvfb lld llvm
-          pip install pycairo testresources
-
       - name: Free up space
         run: |
           sudo rm -rf /usr/share/dotnet
@@ -54,67 +42,68 @@ jobs:
           sudo rm -rf "/usr/local/share/boost"
           sudo rm -rf "$AGENT_TOOLSDIRECTORY"
 
-      - name: Install sccache
-        env:
-          LINK: https://github.com/mozilla/sccache/releases/download
-          SCCACHE_VERSION: 0.2.13
-        run: |
-          SCCACHE_FILE=sccache-$SCCACHE_VERSION-x86_64-unknown-linux-musl
-          mkdir -p $HOME/.local/bin
-          curl -L "$LINK/$SCCACHE_VERSION/$SCCACHE_FILE.tar.gz" | tar xz
-          mv -f $SCCACHE_FILE/sccache $HOME/.local/bin/sccache
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          # - name: Install sccache
+          #   env:
+          #     LINK: https://github.com/mozilla/sccache/releases/download
+          #     SCCACHE_VERSION: 0.2.13
+          #   run: |
+          #     SCCACHE_FILE=sccache-$SCCACHE_VERSION-x86_64-unknown-linux-musl
+          #     mkdir -p $HOME/.local/bin
+          #     curl -L "$LINK/$SCCACHE_VERSION/$SCCACHE_FILE.tar.gz" | tar xz
+          #     mv -f $SCCACHE_FILE/sccache $HOME/.local/bin/sccache
+          #     echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Save sccache
-        uses: actions/cache@v3
-        continue-on-error: false
+          # - name: Save sccache
+          #   uses: actions/cache@v3
+          #   continue-on-error: false
+          #   with:
+          #     path: /home/runner/.cache/sccache
+          #     key: ${{ runner.os }}-sccache
+
+          # - uses: pnpm/action-setup@v2
+          #   name: Install pnpm
+          #   id: pnpm-install
+          #   with:
+          #     version: 8
+          #     run_install: false
+
+          # - name: Get pnpm store directory
+          #   id: pnpm-cache
+          #   shell: bash
+          #   run: |
+          #     echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+          # - uses: actions/cache@v3
+          #   name: Setup pnpm cache
+          #   with:
+          #     path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          #     key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          #     restore-keys: |
+          #       ${{ runner.os }}-pnpm-store-
+
+          # - name: Install dependencies
+          #   run: pnpm install
+
+      - uses: cachix/install-nix-action@v26
+      - uses: cachix/cachix-action@v14
         with:
-          path: /home/runner/.cache/sccache
-          key: ${{ runner.os }}-sccache
-
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          version: 8
-          run_install: false
-
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install dependencies
-        run: pnpm install
+          name: devenv
+      - name: Install devenv.sh
+        run: nix profile install nixpkgs#devenv
 
       - name: Download firefox source and dependencies
-        run: pnpm gluon download
+        run: devenv shell download
 
       - name: Import
-        run: pnpm gluon import
-
-      - name: Bootstrap
-        run: |
-          cd engine
-          ./mach --no-interactive bootstrap --application-choice browser
-          cd ..
+        run: devenv shell import
 
       - name: Build
-        run: pnpm gluon build
+        run: devenv shell build
 
       - name: Package
         # .mar files are not properly generated, but it should be fine
         continue-on-error: true
-        run: pnpm gluon package
+        run: devenv shell package
 
       - name: Rename artifacts
         run: |
